--- a/src/plonetheme/deliberations/theme/styles/theme.scss
+++ b/src/plonetheme/deliberations/theme/styles/theme.scss
@@ -12,7 +12,7 @@ $enable-roboto-webfont: false !default;
 
 @import "bootstrap-icons/font/bootstrap-icons.css";
 $font-family-sans-serif: 'Inter', sans-serif;
-
+$enable-important-utilities: true !default;
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "bootstrap/scss/functions";
 
